@@ -1,16 +1,16 @@
 <?php
 if (!defined ('TYPO3_MODE')) 	die ('Access denied.');
 
-if (1 || extension_loaded('mnogosearch')) {
-	t3lib_div::loadTCA('tt_content');
-	$TCA['tt_content']['types']['list']['subtypes_excludelist'][$_EXTKEY.'_pi1'] = 'layout,select_key,pages';
-	$TCA['tt_content']['types']['list']['subtypes_addlist'][$_EXTKEY.'_pi1'] = 'pi_flexform';
-	t3lib_extMgm::addPiFlexFormValue($_EXTKEY . '_pi1', 'FILE:EXT:mnogosearch/pi1/flexform_ds.xml');
+t3lib_div::loadTCA('tt_content');
+$TCA['tt_content']['types']['list']['subtypes_excludelist'][$_EXTKEY.'_pi1'] = 'layout,select_key,pages';
+$TCA['tt_content']['types']['list']['subtypes_addlist'][$_EXTKEY.'_pi1'] = 'pi_flexform';
+t3lib_extMgm::addPiFlexFormValue($_EXTKEY . '_pi1', 'FILE:EXT:mnogosearch/pi1/flexform_ds.xml');
 
-	t3lib_extMgm::addPlugin(array('LLL:EXT:mnogosearch/locallang_db.xml:tt_content.list_type_pi1', $_EXTKEY.'_pi1'),'list_type');
+t3lib_extMgm::addPlugin(array('LLL:EXT:mnogosearch/locallang_db.xml:tt_content.list_type_pi1', $_EXTKEY.'_pi1'),'list_type');
 
-	t3lib_extMgm::addStaticFile($_EXTKEY,'static/mnoGoSearch/', 'mnoGoSearch');
-}
+t3lib_extMgm::addStaticFile($_EXTKEY,'static/mnoGoSearch/', 'mnoGoSearch');
+
+$tx_mnogosearch_sysconf = unserialize($GLOBALS['TYPO3_CONF_VARS']['EXT']['extConf'][$_EXTKEY]);
 
 $TCA['tx_mnogosearch_indexconfig'] = array (
 	'ctrl' => array (
@@ -21,13 +21,15 @@ $TCA['tx_mnogosearch_indexconfig'] = array (
 		'crdate'    => 'crdate',
 		'cruser_id' => 'cruser_id',
 		'sortby' 	=> 'sorting',
-		'rootLevel'	=> 1,
+		'rootLevel'	=> -1,
 		'dynamicConfigFile' => t3lib_extMgm::extPath($_EXTKEY).'tca.php',
 		'iconfile'	=> t3lib_extMgm::extRelPath($_EXTKEY).'icon_tx_mnogosearch_indexconfig.gif',
 		'typeicon_column'	=> 'tx_mnogosearch_type',
+		'requestUpdate' => 'tx_mnogosearch_table',
 		'typeicons'	=> array(
 			0 => 'pages_link.gif',
 			1 => 'pages_catalog.gif',
+			11 => 'tt_content.gif',
 		),
 	)
 );
@@ -41,6 +43,7 @@ $TCA['tx_mnogosearch_urllog'] = array (
 		'cruser_id' => 'cruser_id',
 		'rootLevel'	=> 1,
 		'readOnly'	=> 1,
+		'hideTable' => $tx_mnogosearch_sysconf['hide_internal_tables'],
 		'dynamicConfigFile' => t3lib_extMgm::extPath($_EXTKEY).'tca.php',
 		'iconfile'	=> 'pages.gif',
 	)
@@ -68,5 +71,7 @@ $GLOBALS['TBE_MODULES_EXT']['xMOD_tx_templavoila_cm1']['staticDataStructures'][]
 	'scope' => 0,
 	'fileref' => 'EXT:'.$_EXTKEY.'/pi1/templates/tv.html',
 );
+
+unset($tx_mnogosearch_sysconf);
 
 ?>
