@@ -3,6 +3,7 @@
 	* CLI script supports indexing database tables
 	* pi1 supports record indexing
 	* Added XCLASS to CLI script
+	* Added new fields for record indexing
 
 08-10-2008	Dmitry Dulepov	<dmitry@typo3.org>
 
